# EasyWAF

./: CHANGELOG.md  Cargo.toml  config.toml
.github/workflows/: release.yml
migrations/: 001_init.sql
packaging/: easywaf.service
src/: config.rs  main.rs
src/modules/: mod.rs  traffic.rs
src/proxy/: mod.rs
src/routes/: certs.rs  dashboard.rs  mod.rs  policy.rs  rules.rs  sites.rs  traffic.rs
static/js/: easywaf.js
templates/: layout_default.html  layout_login.html  policy.html  policy_create.html  policy_rules.html  rule_custom_new.html  rules_all.html  site_create.html  site_settings.html  sites.html  traffic.html
