[package]
name = "easywaf"
version = "0.1.0"
edition = "2024"
authors = ["Yariv Hakim"]
description = "EasyWAF - Self-contained Web Application Firewall and Reverse Proxy"
license = "GPL-3.0"

[[bin]]
name = "easywaf"
path = "src/main.rs"

[dependencies]
# Web framework
axum = { version = "0.8.4", features = ["macros", "json", "tokio", "multipart"] }
axum-server = "0.7"
axum-extra = { version = "0.10", features = ["cookie", "cookie-signed"] }

# Async runtime
tokio = { version = "1.34", features = ["full"] }

# HTTP client (upstream proxying)
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream"] }

# Database
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio-rustls", "macros", "chrono"] }

# Serialisation
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Templates
tera = "1.20"

# Configuration
toml = "0.8.0"

# Time
chrono = { version = "0.4", features = ["serde"] }
time = { version = "0.3", features = ["serde"] }

# Auth
bcrypt = "0.17.0"

# Static file serving
tower-http = { version = "0.6", features = ["fs", "trace"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
urlencoding = "2.1"
async-trait = "0.1"
futures = "0.3"
bytes = "1.6"
