[package]
name = "easywaf"
version = "0.1.0"
edition = "2024"
authors = ["Yariv Hakim"]
description = "EasyWAF - Self-contained Web Application Firewall and Reverse Proxy"
license = "GPL-3.0"

[[bin]]
name = "easywaf"
path = "src/main.rs"

[dependencies]
# Web framework
axum = { version = "0.8.4", features = ["macros", "json", "tokio", "multipart"] }
axum-server = "0.7"
axum-extra = { version = "0.10", features = ["cookie", "cookie-signed"] }

# Async runtime
tokio = { version = "1.34", features = ["full"] }

# HTTP client (upstream proxying)
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream"] }

# Database
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio-rustls", "macros", "chrono"] }

# Serialisation
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Templates
tera = "1.20"

# Configuration
toml = "0.8.0"

# Time
chrono = { version = "0.4", features = ["serde"] }
time = { version = "0.3", features = ["serde"] }

# Auth
bcrypt = "0.17.0"

# Static file serving (set-header lets us send Cache-Control on /static)
tower-http = { version = "0.6", features = ["fs", "trace", "set-header"] }
tower = "0.5"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
urlencoding = "2.1"
async-trait = "0.1"
futures = "0.3"
bytes = "1.6"

# WAF pattern matching — uses a safe automata engine (no ReDoS risk)
regex = "1"

# ─── Debian package (.deb) — cargo-deb ──────────────────────
# Binary → /usr/bin; runtime assets → /opt/easywaf (the systemd unit sets
# WorkingDirectory there). Asset source paths under target/release are
# auto-rewritten to the per-target dir when building with --target.
[package.metadata.deb]
maintainer = "Yariv Hakim"
copyright = "2025, Yariv Hakim"
section = "net"
priority = "optional"
depends = "libc6"
extended-description = """\
EasyWAF is a self-contained Web Application Firewall and HTTP reverse proxy.
It hosts multiple virtual sites, inspects traffic through a rule pipeline
(OWASP-style WAF rules, GeoIP), and ships a web management GUI."""
assets = [
    ["target/release/easywaf",        "/usr/bin/easywaf",                       "755"],
    ["templates/*.html",              "/opt/easywaf/templates/",                "644"],
    ["static/css/easywaf.css",        "/opt/easywaf/static/css/easywaf.css",    "644"],
    ["static/js/easywaf.js",          "/opt/easywaf/static/js/easywaf.js",      "644"],
    ["rules/*.toml",                  "/opt/easywaf/rules/",                     "644"],
    ["config.toml",                   "/opt/easywaf/config.toml",               "644"],
    ["packaging/easywaf.service",     "/lib/systemd/system/easywaf.service",    "644"],
    ["CHANGELOG.md",                  "/usr/share/doc/easywaf/CHANGELOG.md",    "644"],
]

# ─── RPM package (.rpm) — cargo-generate-rpm ────────────────
[package.metadata.generate-rpm]
summary = "Self-contained Web Application Firewall and reverse proxy"
assets = [
    { source = "target/release/easywaf",     dest = "/usr/bin/easywaf",                    mode = "755" },
    { source = "templates/*.html",           dest = "/opt/easywaf/templates/",             mode = "644" },
    { source = "static/css/easywaf.css",     dest = "/opt/easywaf/static/css/easywaf.css", mode = "644" },
    { source = "static/js/easywaf.js",       dest = "/opt/easywaf/static/js/easywaf.js",   mode = "644" },
    { source = "rules/*.toml",               dest = "/opt/easywaf/rules/",                 mode = "644" },
    { source = "config.toml",                dest = "/opt/easywaf/config.toml",            mode = "644" },
    { source = "packaging/easywaf.service",  dest = "/usr/lib/systemd/system/easywaf.service", mode = "644" },
    { source = "CHANGELOG.md",               dest = "/usr/share/doc/easywaf/CHANGELOG.md", mode = "644" },
]
